# trading-strategy-backtester

./: .pre-commit-config.yaml  README.md  pyproject.toml  test.py
backtester/: backtester.py  main.py  portfolio.py
backtester/strategies/: base.py  momentum.py  random.py
src/backtester/: __init__.py  backtester.py  data_handler.py  events.py  execution_handler.py  main.py  metrics.py  portfolio.py
src/backtester/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py  random.py
